# golGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ThreadPool.h  bunnies_40x16.txt  coeship_40x16.txt  crab_40x16.txt  debug_40x16.txt  dump_3339562_1451254877622.gol  dump_9158995_1451254993490.gol  gif.h  glider_40x16.txt  glider_gun_40x16.gol.txt  glider_gun_40x16.txt  golGL.kdev4  grow_by_one_40x16.txt  main.cpp  main.cpp.autosave  orion2_40x16.txt  phoenix_40x16.txt  queen_bee_40x16.txt  random.cpp  random.hpp  schick_engine_40x16.txt  template_40x16.txt  world.cpp  world.hpp
.kdev4/: golGL.kdev4
