project(golGL)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)

set(CMAKE_CXX_FLAGS "-std=c++11 -g -DDEBUG")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_C_COMPILER "clang")
set(CMAKE_BUILD_TYPE Debug)

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost 1.55.0)
if(Boost_FOUND)
  ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
  include_directories(${Boost_INCLUDE_DIRS})
  add_executable(${PROJECT_NAME} ${SRC_LIST})
  target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
endif()

add_subdirectory(external/gosu/cmake)
target_link_libraries(${PROJECT_NAME} gosu)
