project(golGL)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)

set(CMAKE_CXX_FLAGS "-std=c++11 -O3 -DGOSU_CPP11_ENABLED")
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_C_COMPILER "clang")
set(CMAKE_BUILD_TYPE Release)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)
find_package(Boost 1.55.0 REQUIRED)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  add_executable(${PROJECT_NAME} ${SRC_LIST})
  target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
endif()

set(BUILD_DYNAMIC_LIBRARIES ON)
set(BUILD_STATIC_LIBRARIES OFF)
set(GOSU_CPP11_ENABLED ON)
add_subdirectory(external/gosu/cmake)
include_directories(external/gosu)
target_link_libraries(${PROJECT_NAME} freetype SDL SDL_ttf X11 GL gobject-2.0 glib-2.0 pango-1.0 pangoft2-1.0 fontconfig openal vorbis vorbisfile sndfile Xinerama freeimage pthread GosuDynamic)
